--- a/public/index.html
+++ b/public/index.html
@@ -3,42 +3,21 @@
 <head>
     <meta charset="UTF-8" />
     <title>Uranus Tag Counter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<h1>Uranus Tag Counter</h1>
+<div class="container">
+    <div class="logo-container">
+        <img src="yn.png" alt="Logo" class="logo">
+    </div>
 
-<div id="dashboard"></div>
+    <h1>تگ‌های رویداد نقطه</h1>
+
+    <div id="dashboard" class="dashboard"></div>
+</div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script>
-    const socket = io();
-
-    const counters = {};
-
-    socket.on('initialData', (data) => {
-        Object.assign(counters, data);
-        renderDashboard();
-    });
-
-    socket.on('update', (data) => {
-        const { key, count } = data;
-        if (counters.hasOwnProperty(key)) {
-            counters[key] = count;
-            renderDashboard();
-        }
-    });
-
-    function renderDashboard() {
-        let html = '<table border="1" cellpadding="8" style="border-collapse: collapse;">';
-        html += '<tr><th>Key</th><th>Count</th></tr>';
-
-        for (const key in counters) {
-            html += `<tr><td>${key}</td><td>${counters[key]}</td></tr>`;
-        }
-        html += '</table>';
-
-        document.getElementById('dashboard').innerHTML = html;
-    }
-</script>
+<script src="script.js"></script>
 </body>
 </html>
