--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <title>Uranus Tag Counter</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 <div class="container">
     <div class="logo-container">
-        <img src="yn.png" alt="Logo" class="logo">
+        <img src="uranus.png" alt="Logo" class="logo">
     </div>
 
     <h1>تگ‌های رویداد نقطه</h1>
